Fixed Light/Dark Mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,6 @@
 
 .dark{
     background-color: #515151;
-    min-height: 100vh;
 }
 
 // Navbar
@@ -87,7 +86,7 @@
     width: 20px;
     height: 20px;
     cursor: pointer;
-    margin-left: 1.5em;
+    margin-left: 2em;
     border-radius: 50%;
 }
 
